force-app/main/default/objects/SMF7_RealtimeKit_Config__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Cloudflare account id.</description>
    <label>Account Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>