force-app/main/default/objects/SMF7_RealtimeKit_Config__mdt/fields/AppId__c.field-meta.xml
<CustomField>
    <fullName>AppId__c</fullName>
    <description>RealtimeKit app id.</description>
    <label>App Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>