force-app/main/default/objects/SMF7_RealtimeKit_Config__mdt/fields/PresetName__c.field-meta.xml
<CustomField>
    <fullName>PresetName__c</fullName>
    <description>RealtimeKit preset applied to TECH and SUPPORT participants.</description>
    <label>Preset Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>